--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,6 @@ android {
 
 dependencies {
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
-    implementation 'com.github.gurunbg:FishBun:translation-SNAPSHOT'
+    implementation 'com.github.gurunbg:FishBun:translation2-SNAPSHOT'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
